Tue Oct  8 12:37:25 1996  Ian Lance Taylor  <ian@cygnus.com>

	* options.h (HAD_RCS4): Remove; no longer used.

Mon Sept 30 13:17:07 1996  Mike Ladwig  <mike@twinpeaks.prc.com>

	* ae_if.c (DoScript): Fixed bug cutting off the last character of
	the path in the 'SPWD' AE Parameter.

Tue Sep 24 14:39:40 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Add TMPDIR_DFLT.

Wed Sep  4 13:40:35 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (Makefile): New rule.

Mon Aug 26 12:46:10 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (mkdir_if_needed): Added.

Fri Aug 16 16:04:26 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* Makefile.in (installdirs): new (empty) target

Wed Aug 14 12:01:39 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* MacCVS68k.sit.hqx, MacCVSPPC.sit.hqx: New copies of these files
	from Mike Ladwig (gets rid of alloca.c; presumably adds
	mac_config.h; not sure if there are other changes).

Tue Aug 13 15:02:15 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* ae_if.c: Part of the 9 Aug change didn't get checked in.  Fix it.

Fri Aug 9 14:53:01 1996  Mike Ladwig  <mike@twinpeaks.prc.com>

	* ae_if.c: Include 'mac_config.h" to get macintosh configuration
	values.  Reworked application I/O code (many routines) to make
	MacCVS either a "pure" faceless application (AE or file output) _OR_
	a SIOUX console application.  This decision is made at compilation
	time by defining (or not) AE_IO_HANDLERS.
	* mac_config.h: Added, moving many configuration parameters from the
	maccvs.pch header file here.  This makes it possible to change
	macintosh build -specific parameters without recompiling all CVS and
	Mac port code.
	* mac_init.c: Include 'mac_config.h" to get macintosh configuration
	values. Removed unnecessary toolbox initialization code.  Made
	AE/Console choice at buildtime.
	* maccvs.pch: Moved most configuration parmeters to 'mac_config.h"
	* filesubr.c, macos_filesys.c, pwd.c, rcmd.c, run.c server_if.c: